--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   <div id="navigator" class="hidden">
     <div>
-    <a href="#presentazione"><img src="icons/in_progress.png" alt="" class="w-100"></a>
-    <a href="#progetti "><img src="icons/in_progress.png" alt="" class="w-100"></a>
-    <a href="#competenze "><img src="icons/in_progress.png" alt="" class="w-100"></a>
-    <a href="#hobby"><img src="icons/in_progress.png" alt="" class="w-100"></a>
+    <a href="#presentazione"><img src="icons/profile_icon.png" alt="" class="w-100"></a>
+    <a href="#progetti "><img src="icons/project_icon.png" alt="" class="w-100"></a>
+    <a href="#competenze "><img src="icons/skill_icon.png" alt="" class="w-100"></a>
+    <a href="#hobby"><img src="icons/hobby_icon.png" alt="" class="w-100"></a>
     <a href="#contatti "><img src="icons/in_progress.png" alt="" class="w-100"></a>
     </div>
 </div>
@@ -39,7 +39,7 @@
   <main>
     <div id="presentazione" class="w-100 paddingBottom-2">
       <div class="titleContainer w-100 flex-center">
-        <img src="icons/in_progress.png" alt="">
+        <img src="icons/profile_icon.png" alt="">
         <p>Presentazione</p>
       </div>
       <div class="flex-center">
@@ -62,7 +62,7 @@
     
     <div id="progetti" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
-        <img src="icons/in_progress.png" alt="">
+        <img src="icons/project_icon.png" alt="">
         <p>Progetti</p>
       </div>
       <div class="flex-center">
@@ -86,7 +86,7 @@
 
     <div id="competenze" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
-        <img src="icons/in_progress.png" alt="">
+        <img src="icons/skill_icon.png" alt="">
         <p>Competenze</p>
       </div>
       <div class="flex-center">
@@ -112,7 +112,7 @@
 
     <div id="hobby" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
-        <img src="icons/in_progress.png" alt="">
+        <img src="icons/hobby_icon.png" alt="">
         <p>Hobby</p>
       </div>
       <div class="flex-center">
@@ -136,27 +136,27 @@
     </div>
     <div class="flex-center contactCards">
       <div class="contactCard">
-        <img src="icons/in_progress.png" alt="">
+        <a href="mailto:valerio.dellefave00@gmail.com"><img src="icons/Social/email_icon.png" alt=""></a>
         <p>E-mail</p>
       </div>
       <div class="contactCard">
-        <img src="icons/in_progress.png" alt="">
+        <a href="https://www.facebook.com/valerio.dellefave"><img src="icons/Social/facebook_icon.png" alt=""></a>
         <p>Facebook</p>
       </div>
       <div class="contactCard">
-        <img src="icons/in_progress.png" alt="">
+        <a href="https://github.com/ValeriodelleFave"><img src="icons/Social/github_icon.png" alt=""></a>
         <p>GitHub</p>
       </div>
       <div class="contactCard">
-        <img src="icons/in_progress.png" alt="">
+        <a href="https://www.instagram.com/valerio_dellefave/"><img src="icons/Social/instagram_icon.png" alt=""></a>
         <p>Instagram</p>
       </div>
       <div class="contactCard">
-        <img src="icons/in_progress.png" alt="">
+        <a href="https://www.linkedin.com/in/valerio-delle-fave/"><img src="icons/Social/linkedin_icon.png" alt=""></a>
         <p>LinkedIn</p>
       </div>
       <div class="contactCard">
-        <img src="icons/in_progress.png" alt="">
+        <a href="https://twitter.com/ValerioFave"><img src="icons/Social/twitter_icon.png" alt=""></a>
         <p>Twitter</p>
       </div>
     </div>
