--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="it">
 
 <head>
   <title>Valerio delle Fave</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="This is my personal website.">
   <link rel="icon" href="icons/in_progress.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="/style.css">
@@ -39,7 +42,7 @@
   <main>
     <div id="presentazione" class="w-100 paddingBottom-2">
       <div class="titleContainer w-100 flex-center">
-        <img src="icons/profile_icon.png" alt="presentation image">
+        <img src="icons/profile_icon.png" alt="presentation section image">
         <p>Presentazione</p>
       </div>
       <div class="flex-center">
@@ -62,7 +65,7 @@
     
     <div id="progetti" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
-        <img src="icons/project_icon.png" alt="project image">
+        <img src="icons/project_icon.png" alt="project section image">
         <p>Progetti</p>
       </div>
       <div class="flex-center">
@@ -86,7 +89,7 @@
 
     <div id="competenze" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
-        <img src="icons/skill_icon.png" alt="skills image">
+        <img src="icons/skill_icon.png" alt="skills section image">
         <p>Competenze</p>
       </div>
       <div class="flex-center">
@@ -112,7 +115,7 @@
 
     <div id="hobby" class="w-100 paddingBottom-2">
       <div class="titleContainer flex-center">
-        <img src="icons/hobby_icon.png" alt="hobby image">
+        <img src="icons/hobby_icon.png" alt="hobby section image">
         <p>Hobby</p>
       </div>
       <div class="flex-center">
