--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="This is my personal website.">
   <link rel="icon" href="icons/in_progress.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet" href="/roboto.css">
   <link rel="stylesheet" href="/style.css">
   <script src="/script.js"></script>
 </head>
