font size and other

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="This is my personal website.">
   <link rel="icon" href="icons/in_progress.png">
   <link rel="stylesheet" href="/roboto.css">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/!style_minified.css">
   <script src="/script.js"></script>
 </head>
 
@@ -50,8 +50,12 @@
           <img src="icons/in_progress.png" alt="profile image">
         </div>
         <div class="flex-center paddingRight-8">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sem leo, consectetur non ante ac, cursus accumsan odio. Morbi egestas elit sollicitudin, vulputate ex commodo, scelerisque lorem. Fusce eleifend sapien vitae pharetra volutpat. Proin finibus hendrerit odio, sed porttitor odio tristique eu. Vestibulum blandit eros lacinia, tincidunt turpis a, feugiat mauris. Quisque sit amet sapien aliquam, finibus odio nec, fermentum felis. Integer in massa consequat, porta velit quis, maximus enim.
+          <p class="presentationText">
+            Ciao, mi chiamo Valerio! Sono un ragazzo romano appassionato dell'informatica, attualmente sono più improntato nello sviluppo web (questo sito ne è la prova &#128521;), 
+            però sono curioso di conoscere le altre sfaccettature di questo enorme mondo, in merito ho svolto alcuni progetti che mi hanno permesso di crescere a livello professionale. 
+            Tuttavia ho altri interessi che non riguardano strettamente l'informatica, come: il teatro, la lettura, lo sport, la musica.
+            Date un'occhiata a questo sito e fatemi sapere che ne pensate nei diversi canali comunicativi che trovate in fondo.
+            Buona visione! &#128578; 
           </p>
         </div>
       </div>
@@ -163,7 +167,7 @@
         <p>Twitter</p>
       </div>
     </div>
-      <p>Copyright © Valerio delle Fave. All Rights Reserved.</p>
+      <p class="copyrightText">Copyright © Valerio delle Fave. All Rights Reserved.</p>
   </footer>
 
 </body>
