--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="flex-center">
         <div class="paddingLeft-8 paddingRight-8">
-          <img src="icons/in_progress.png" alt="profile image">
+          <img src="icons/in_progress.png" alt="profile image" class="presentationImage">
         </div>
         <div class="flex-center paddingRight-8">
           <p class="presentationText">
@@ -74,13 +74,9 @@
       </div>
       <div class="flex-center">
         <div class="slider">
-          <img src="icons/in_progress.png" alt="first project image" class="sliderImage w-100">
-          <img src="icons/in_progress.png" alt="second project image" class="sliderImage w-100 hidden">
-          <img src="icons/in_progress.png" alt="third project image" class="sliderImage w-100 hidden">
-          <div class="flex-center">
-            <div class="previous flex-center">&#10094;</div>
-            <div class="next flex-center">&#10095;</div>
-          </div>
+          <img src="icons/in_progress.png" alt="first project image" class="">
+          <img src="icons/in_progress.png" alt="second project image" class="">
+          <img src="icons/in_progress.png" alt="third project image" class="">        
         </div>
       </div>
     </div>
@@ -124,13 +120,9 @@
       </div>
       <div class="flex-center">
         <div class="slider">
-          <img src="icons/in_progress.png" alt="first hobby image" class="sliderImage w-100">
-          <img src="icons/in_progress.png" alt="second hobby image" class="sliderImage w-100 hidden">
-          <img src="icons/in_progress.png" alt="third hobby image" class="sliderImage w-100 hidden">
-          <div class="flex-center">
-            <div class="previous flex-center">&#10094;</div>
-            <div class="next flex-center">&#10095;</div>
-          </div>
+          <img src="icons/in_progress.png" alt="first hobby image" class="sliderImage">
+          <img src="icons/in_progress.png" alt="second hobby image" class="sliderImage">
+          <img src="icons/in_progress.png" alt="third hobby image" class="sliderImage">
         </div>
       </div>
     </div>
