--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
   <div id="navigator" class="hidden">
     <div>
-    <a href="#presentazione"><img src="icons/profile_icon.png" alt="presentation link" class="w-100"></a>
-    <a href="#progetti"><img src="icons/project_icon.png" alt="project link" class="w-100"></a>
-    <a href="#competenze "><img src="icons/skill_icon.png" alt="skill link" class="w-100"></a>
-    <a href="#hobby"><img src="icons/hobby_icon.png" alt="hobby link" class="w-100"></a>
-    <a href="#contatti "><img src="icons/in_progress.png" alt="contact link" class="w-100"></a>
+    <a title="Presentazione" href="#presentazione"><img src="icons/profile_icon.png" alt="presentation link" class="w-100"></a>
+    <a title="Progetti" href="#progetti"><img src="icons/project_icon.png" alt="project link" class="w-100"></a>
+    <a title="Competenze " href="#competenze "><img src="icons/skill_icon.png" alt="skill link" class="w-100"></a>
+    <a title="Hobby" href="#hobby"><img src="icons/hobby_icon.png" alt="hobby link" class="w-100"></a>
+    <a title="Contatti " href="#contatti "><img src="icons/in_progress.png" alt="contact link" class="w-100"></a>
     </div>
 </div>
 
@@ -74,9 +74,27 @@
       </div>
       <div class="flex-center">
         <div class="slider">
-          <img src="icons/in_progress.png" alt="first project image" class="">
-          <img src="icons/in_progress.png" alt="second project image" class="">
-          <img src="icons/in_progress.png" alt="third project image" class="">        
+          <div class="slide">
+            <img src="icons/in_progress.png" alt="first project image">
+            <div class="slideTextContainer">
+              <p class="slideTitle">Titolo</p>
+              <p class="slideDescription">Descrizione</p>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="icons/in_progress.png" alt="second project image">
+            <div class="slideTextContainer">
+              <p class="slideTitle">Titolo</p>
+              <p class="slideDescription">Descrizione</p>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="icons/in_progress.png" alt="third project image">
+            <div class="slideTextContainer">
+              <p class="slideTitle">Titolo</p>
+              <p class="slideDescription">Descrizione</p>
+            </div>
+          </div>      
         </div>
       </div>
     </div>
@@ -120,9 +138,24 @@
       </div>
       <div class="flex-center">
         <div class="slider">
-          <img src="icons/in_progress.png" alt="first hobby image" class="sliderImage">
-          <img src="icons/in_progress.png" alt="second hobby image" class="sliderImage">
-          <img src="icons/in_progress.png" alt="third hobby image" class="sliderImage">
+          <div class="slide">
+            <img src="icons/in_progress.png" alt="first project image">
+            <div class="slideTextContainer">
+              <p class="slideTitle">Titolo</p>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="icons/in_progress.png" alt="second project image">
+            <div class="slideTextContainer">
+              <p class="slideTitle">Titolo</p>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="icons/in_progress.png" alt="third project image">
+            <div class="slideTextContainer">
+              <p class="slideTitle">Titolo</p>
+            </div>
+          </div>      
         </div>
       </div>
     </div>
