--- a/index.html
+++ b/index.html
@@ -112,15 +112,69 @@
       </div>
       <div class="flex-center">
         <div class="skills">
-          <div class="skill"><img src="icons/in_progress.png" alt="first skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="second skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="third skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="fourth skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="fiveth skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="sixth skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="seventh skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="eighth skill image"></div>
-          <div class="skill"><img src="icons/in_progress.png" alt="nineth skill image"></div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="first skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="second skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="third skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="fourth skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="fiveth skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="sixth skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="seventh skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="eighth skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="icons/in_progress.png" alt="nineth skill image">
+            <div class="skillText">
+              <p>Skill title</p>
+              <p>Description very very very long</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
