--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="This is my personal website.">
   <link rel="icon" href="icons/in_progress.png">
   <link rel="stylesheet" href="/roboto.css">
-  <link rel="stylesheet" href="/!style_minified.css">
+  <link rel="stylesheet" href="/style.css">
   <script src="/script.js"></script>
 </head>
 
@@ -33,9 +33,9 @@
     <div>
     <a title="Presentazione" href="#presentazione"><img src="icons/profile_icon.png" alt="presentation link" class="w-100"></a>
     <a title="Progetti" href="#progetti"><img src="icons/project_icon.png" alt="project link" class="w-100"></a>
-    <a title="Competenze" href="#competenze "><img src="icons/skill_icon.png" alt="skill link" class="w-100"></a>
+    <a title="Competenze" href="#competenze"><img src="icons/skill_icon.png" alt="skill link" class="w-100"></a>
     <a title="Hobby" href="#hobby"><img src="icons/hobby_icon.png" alt="hobby link" class="w-100"></a>
-    <a title="Contatti" href="#contatti "><img src="icons/contact_icon.png" alt="contact link" class="w-100"></a>
+    <a title="Contatti" href="#contatti"><img src="icons/contact_icon.png" alt="contact link" class="w-100"></a>
     </div>
 </div>
 
