--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="This is my personal website.">
   <link rel="icon" href="icons/in_progress.png">
   <link rel="stylesheet" href="/roboto.css">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/!style_minified.css">
   <script src="/script.js"></script>
 </head>
 
@@ -114,63 +114,63 @@
         <div class="skills">
           <div class="skill">
             <img src="icons/in_progress.png" alt="first skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="second skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="third skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="fourth skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="fiveth skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="sixth skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="seventh skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="eighth skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="nineth skill image">
-            <div class="skillText">
+            <div class="skillText flex-center">
               <p>Skill title</p>
               <p>Description very very very long</p>
             </div>
