--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
   </nav>
 
   <div id="navigator" class="hidden">
-    <div>
-    <a title="Presentazione" href="#presentazione"><img src="icons/profile_icon.png" alt="presentation link" class="w-100"></a>
-    <a title="Progetti" href="#progetti"><img src="icons/project_icon.png" alt="project link" class="w-100"></a>
-    <a title="Competenze" href="#competenze"><img src="icons/skill_icon.png" alt="skill link" class="w-100"></a>
-    <a title="Hobby" href="#hobby"><img src="icons/hobby_icon.png" alt="hobby link" class="w-100"></a>
-    <a title="Contatti" href="#contatti"><img src="icons/contact_icon.png" alt="contact link" class="w-100"></a>
-    </div>
-</div>
+
+      <div>
+        <a title="Presentazione" href="#presentazione"><img src="icons/profile_icon.png" alt="presentation link" class="w-100"></a>
+        <a title="Progetti" href="#progetti"><img src="icons/project_icon.png" alt="project link" class="w-100"></a>
+        <a title="Competenze" href="#competenze"><img src="icons/skill_icon.png" alt="skill link" class="w-100"></a>
+        <a title="Hobby" href="#hobby"><img src="icons/hobby_icon.png" alt="hobby link" class="w-100"></a>
+        <a title="Contatti" href="#contatti"><img src="icons/contact_icon.png" alt="contact link" class="w-100"></a>
+      </div>
+
+  </div>
 
   <main>
     <div id="presentazione" class="w-100 paddingBottom-2">
@@ -49,7 +51,7 @@
         <div class="paddingLeft-8 paddingRight-8">
           <img src="icons/in_progress.png" alt="profile image" class="presentationImage">
         </div>
-        <div class="flex-center paddingRight-8">
+        <div class="flex-center paddingLeft-4 paddingRight-4">
           <p class="presentationText">
             Ciao, mi chiamo Valerio! Sono un ragazzo romano appassionato dell'informatica, attualmente sono più improntato nello sviluppo web (questo sito ne è la prova &#128521;), 
             però sono curioso di conoscere le altre sfaccettature di questo enorme mondo, in merito ho svolto alcuni progetti che mi hanno permesso di crescere a livello professionale. 
@@ -213,7 +215,6 @@
         </div>
       </div>
     </div>
-
   </main>
 
   <footer id="contatti" class="w-100">
