--- a/index.html
+++ b/index.html
@@ -223,27 +223,27 @@
     </div>
     <div class="flex-center contactCards">
       <div class="contactCard">
-        <a href="mailto:valerio.dellefave00@gmail.com"><img src="icons/Social/email_icon.png" alt="email contact"></a>
+        <a class="flex-center" href="mailto:valerio.dellefave00@gmail.com"><img src="icons/Social/email_icon.png" alt="email contact"></a>
         <p>E-mail</p>
       </div>
       <div class="contactCard">
-        <a href="https://www.facebook.com/valerio.dellefave"><img src="icons/Social/facebook_icon.png" alt="facebook contact"></a>
+        <a class="flex-center" href="https://www.facebook.com/valerio.dellefave"><img src="icons/Social/facebook_icon.png" alt="facebook contact"></a>
         <p>Facebook</p>
       </div>
       <div class="contactCard">
-        <a href="https://github.com/ValeriodelleFave"><img src="icons/Social/github_icon.png" alt="github contact"></a>
+        <a class="flex-center" href="https://github.com/ValeriodelleFave"><img src="icons/Social/github_icon.png" alt="github contact"></a>
         <p>GitHub</p>
       </div>
       <div class="contactCard">
-        <a href="https://www.instagram.com/valerio_dellefave/"><img src="icons/Social/instagram_icon.png" alt="instagram contact"></a>
+        <a class="flex-center" href="https://www.instagram.com/valerio_dellefave/"><img src="icons/Social/instagram_icon.png" alt="instagram contact"></a>
         <p>Instagram</p>
       </div>
       <div class="contactCard">
-        <a href="https://www.linkedin.com/in/valerio-delle-fave/"><img src="icons/Social/linkedin_icon.png" alt="linkedin contact"></a>
+        <a class="flex-center" href="https://www.linkedin.com/in/valerio-delle-fave/"><img src="icons/Social/linkedin_icon.png" alt="linkedin contact"></a>
         <p>LinkedIn</p>
       </div>
       <div class="contactCard">
-        <a href="https://twitter.com/ValerioFave"><img src="icons/Social/twitter_icon.png" alt="twitter contact"></a>
+        <a class="flex-center" href="https://twitter.com/ValerioFave"><img src="icons/Social/twitter_icon.png" alt="twitter contact"></a>
         <p>Twitter</p>
       </div>
     </div>
