--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
   </nav>
 
   <div id="navigator" class="hidden">
-
       <div>
         <a title="Presentazione" href="#presentazione"><img src="icons/profile_icon.png" alt="presentation link" class="w-100"></a>
         <a title="Progetti" href="#progetti"><img src="icons/project_icon.png" alt="project link" class="w-100"></a>
@@ -38,7 +37,6 @@
         <a title="Hobby" href="#hobby"><img src="icons/hobby_icon.png" alt="hobby link" class="w-100"></a>
         <a title="Contatti" href="#contatti"><img src="icons/contact_icon.png" alt="contact link" class="w-100"></a>
       </div>
-
   </div>
 
   <main>
@@ -65,7 +63,7 @@
 
     <div class="row w-100 flex-center">
         <p class="rowText">
-          ~ Solo comprenendo il dolore che infliggiamo agli altri, impariamo a essere migliori ~  
+          ~ Mens sana in corpore sano ~  
         </p>
     </div>
     
@@ -103,7 +101,7 @@
 
     <div class="row w-100 flex-center">
       <p class="rowText">
-        ~ L'egoistico desiderio di mantenere la pace scatena le guerre  ~  
+        ~ Rem tene, verba sequentur ~  
       </p>
     </div>
 
@@ -118,63 +116,63 @@
             <img src="icons/in_progress.png" alt="first skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Livello: base</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="second skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Livello: medio</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="third skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Livello: avanzato</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="fourth skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Livello: avanzato</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="fiveth skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Livello: medio</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="sixth skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Level: medium</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="seventh skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Livello: medio</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="eighth skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Level: advanced</p>
             </div>
           </div>
           <div class="skill">
             <img src="icons/in_progress.png" alt="nineth skill image">
             <div class="skillText flex-center">
               <p>Skill title</p>
-              <p>Description very very very long</p>
+              <p>Livello: base</p>
             </div>
           </div>
         </div>
@@ -183,7 +181,7 @@
 
     <div class="row w-100 flex-center">
       <p class="rowText">
-        ~ Conosci te stesso, quando capisci ciò che puoi fare e ciò che invece non potrai mai fare  ~  
+        ~ Re opitulandum, non verbis ~  
       </p>
     </div>
 
@@ -247,7 +245,7 @@
         <p>Twitter</p>
       </div>
     </div>
-      <p class="copyrightText">Copyright © Valerio delle Fave. All Rights Reserved.</p>
+    <p class="copyrightText">Copyright © Valerio delle Fave. All Rights Reserved.</p>
   </footer>
 
 </body>
