--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="icons/in_progress.png">
   <link rel="stylesheet" href="/roboto.css">
   <link rel="stylesheet" href="/!style_minified.css">
-  <script src="/script.js"></script>
+  <script src="/!script_minified.js"></script>
 </head>
 
 <body>
@@ -18,14 +18,14 @@
       <img src="icons/in_progress.png" alt="logo" srcset="" >
     </div>
     <div id="linksContainer" class="w-100">
-        <div><a href="#presentazione" class="active">Presentazione</a></div>
-        <div><a href="#progetti">Progetti</a></div>
-        <div><a href="#competenze">Competenze</a></div>
-        <div><a href="#hobby">Hobby</a></div>
-        <div><a href="#contatti">Contatti</a></div>
+        <a href="#presentazione" class="active">Presentazione</a>
+        <a href="#progetti">Progetti</a>
+        <a href="#competenze">Competenze</a>
+        <a href="#hobby">Hobby</a>
+        <a href="#contatti">Contatti</a>
     </div>
     <div id="languageContainer">
-      <img src="icons/in_progress.png" alt="language" srcset="">
+      <img id="language" src="icons/language_icon.png" alt="language" srcset="">
     </div>
   </nav>
 
