--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Valerio delle Fave</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="HandheldFriendly" content="true">
   <meta name="description" content="This is my personal website.">
   <link rel="icon" href="icons/in_progress.png">
   <link rel="stylesheet" href="/roboto.css">
