aggiunto nuovo stile icone contatti

--- a/index.html
+++ b/index.html
@@ -221,6 +221,35 @@
       <p>Contatti</p>
     </div>
     <div class="flex-center contactCards">
+
+
+      <!-- Da rivedere -->
+      <a class="icon-button" href="#">
+        <i class="icon">G</i>
+        <span></span>
+      </a>
+      <a class="icon-button" href="#">
+        <i class="icon">G</i>
+        <span></span>
+      </a>
+      <a class="icon-button" href="#">
+        <i class="icon">G</i>
+        <span></span>
+      </a>
+      <a class="icon-button" href="#">
+        <i class="icon">G</i>
+        <span></span>
+      </a>
+      <a class="icon-button" href="#">
+        <i class="icon">G</i>
+        <span></span>
+      </a>
+      <a class="icon-button" href="#">
+        <i class="icon">G</i>
+        <span></span>
+      </a>
+      
+
       <div class="contactCard">
         <a class="flex-center" href="mailto:valerio.dellefave00@gmail.com"><img src="icons/Social/email_icon.png" alt="email contact"></a>
         <p>E-mail</p>
