--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       </div>
   </div>
 
+  <div id="backToTop" class="flex-center" onclick="backToTop()">
+    <span>↑</span>
+  </div>
+
   <main>
     <div id="presentazione" class="w-100 paddingBottom-2">
       <div class="titleContainer w-100 flex-center">
