added slide border and hidden language change

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#hobby">Hobby</a>
         <a href="#contatti">Contatti</a>
     </div>
-    <div id="languageContainer">
+    <div id="languageContainer" class="hidden">
       <img id="language" src="icons/language_icon.png" alt="language" srcset="">
     </div>
   </nav>
