--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <nav id="navBar" class="w-100">
     <div id="logoContainer">
-      <img src="icons/in_progress.png" alt="logo" srcset="" >
+      <img src="Images/logo_ico.png" alt="logo" srcset="" >
     </div>
     <div id="linksContainer" class="w-100">
         <a href="#presentazione" class="active">Presentazione</a>
@@ -25,9 +25,9 @@
         <a href="#hobby">Hobby</a>
         <a href="#contatti">Contatti</a>
     </div>
-    <div id="languageContainer" class="hidden">
+    <!-- <div id="languageContainer" class="hidden">
       <img id="language" src="icons/language_icon.png" alt="language" srcset="">
-    </div>
+    </div> -->
   </nav>
 
   <div id="navigator" class="hidden">
@@ -41,7 +41,7 @@
   </div>
 
   <div id="backToTop" class="flex-center" onclick="backToTop()">
-    <span>↑</span>
+    <img src="Images/arrow_up.svg" alt="torna su">
   </div>
 
   <main>
@@ -52,7 +52,7 @@
       </div>
       <div class="flex-center">
         <div class="paddingLeft-8 paddingRight-8">
-          <img src="icons/in_progress.png" alt="profile image" class="presentationImage">
+          <img src="Images/chisono.png" alt="profile image" class="presentationImage">
         </div>
         <div class="flex-center paddingLeft-4 paddingRight-4">
           <p class="presentationText">
@@ -80,7 +80,7 @@
       <div class="flex-center">
         <div class="slider">
           <div class="slide">
-            <img src="icons/in_progress.png" alt="first project image">
+            <img src="Images/slider_image1.jpeg" alt="first project image">
             <div class="slideTextContainer">
               <p class="slideTitle">Titolo</p>
               <p class="slideDescription">Descrizione</p>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="slide">
-            <img src="icons/in_progress.png" alt="third project image">
+            <img src="Images/slider_image1.jpeg" alt="third project image">
             <div class="slideTextContainer">
               <p class="slideTitle">Titolo</p>
               <p class="slideDescription">Descrizione</p>
@@ -198,7 +198,7 @@
       <div class="flex-center">
         <div class="slider">
           <div class="slide">
-            <img src="icons/in_progress.png" alt="first project image">
+            <img src="Images/slider_image1.jpeg" alt="first project image">
             <div class="slideTextContainer">
               <p class="slideTitle">Titolo</p>
             </div>
@@ -210,7 +210,7 @@
             </div>
           </div>
           <div class="slide">
-            <img src="icons/in_progress.png" alt="third project image">
+            <img src="Images/slider_image1.jpeg" alt="third project image">
             <div class="slideTextContainer">
               <p class="slideTitle">Titolo</p>
             </div>
