--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   
   <nav id="navBar" class="w-100">
-    <div id="logoContainer">
+    <!-- <div id="logoContainer">
       <img src="Images/logo_ico.png" alt="logo" srcset="" >
-    </div>
+    </div> -->
     <div id="linksContainer" class="w-100">
         <a href="#presentazione" class="active">Presentazione</a>
         <a href="#progetti">Progetti</a>
